# connors-screener

./: .gitignore  .python-version  README.md  pyproject.toml
.github/workflows/: build-env.yml  ci.yml
configs/: elephant_bars_custom.yaml  momentum_breakout.yaml  rsi_oversold.yaml
connors_screener/: __init__.py
connors_screener/config/: __init__.py  screening.py
connors_screener/core/: __init__.py  screener.py
connors_screener/screening/: __init__.py  config_loader.py
connors_screener/screening/configs/: __init__.py  finviz_rsi2.py  tradingview_crypto_basic.py  tradingview_elephant_bars.py  tradingview_momentum.py  tradingview_rsi2.py  tradingview_value.py
connors_screener/screening/post_filters/: __init__.py  elephant_bars.py
connors_screener/screening/providers/: __init__.py  finviz.py  tradingview.py  tradingview_crypto.py
connors_screener/services/: __init__.py  screener_service.py
tests/: test_screener_service.py
tests/screening/: test_config_loader.py  test_configs.py  test_core.py  test_integration.py  test_post_filters.py  test_providers.py
